# lowrank_inference

./: .gitignore  README.md  pyproject.toml
data/: conditions_monkeyA.csv  conditions_monkeyF.csv  dms_many_result_1.npz  dms_many_result_2.npz  dms_many_result_3.npz  mante_fit_result.npz  mante_many_result.npz  mante_many_result_2.npz  mante_many_result_3.npz  mante_subsampling.npz  mante_subsampling_more.npz
low_rank_rnns/: clustering.py  dms.py  helpers.py  mante.py  mante_regressions.py  mante_regressions2.py  modules.py  mtdr.py  plotting.py  rankone.py  rankthree.py  ranktwo.py  raposo.py  rdm.py  romo.py  stats.py
models/: dms_fitlr_512.pt  dms_rank2_512.pt  mante_fitlr_512.pt  mante_monkeyA_subspace_rank1_22.pt  mante_monkeyA_subspace_rank2_22.pt  mante_monkeyA_subspace_rank3_22.pt  mante_monkeyA_subspace_rank4_22.pt  mante_monkeyA_subspace_rank5_22.pt  mante_monkeyF_subspace_5.pt  mante_monkeyF_subspace_rank1_5.pt  mante_monkeyF_subspace_rank2_5.pt  mante_monkeyF_subspace_rank3_5.pt  mante_monkeyF_subspace_rank4_5.pt  mante_monkeyF_subspace_rank5_5.pt  mante_rank1_512.pt  rdm_fitlr_512.pt  rdm_rank1_512.pt  romo_fit_lr.pt  romo_rank2_512.pt
notebooks/: 1_validation.ipynb  2_many_fits.ipynb  2_subsampling.ipynb  3_4_mante_fits.ipynb  5_monkeyA.ipynb  dms.ipynb  monkeyF.ipynb
training_scripts/: dms_fullrank_fit.py  dms_lowrank_fit.py  fit_mante.py  fit_mante_subs.py  mante_fit_fullrank.py  mante_fit_lowrank.py  many_fit_dms.py  many_fit_mante.py  rdm_fr_fitlr.py  refit_mante_lowrank.py  romo_fit_lr.py  train_dms_fr.py  train_dms_lr.py  train_mante_lr.py  (+1 more)
(+1 files in other folders)
