[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "low-rank-rnns"
version = "0.1.0"
description = "Low-rank Inference from Neural Trajectories (LINT)"
authors = [
    {name = "Adrian Valente", email = "adrian.valente@ens.fr"}
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
exp = ["jupyter"]

[tool.setuptools]
packages = ["low_rank_rnns"]
